--- a/tourplanner/src/main/java/at/matthias/tourplanner/resources/fxml/mainWindow.fxml
+++ b/tourplanner/src/main/java/at/matthias/tourplanner/resources/fxml/mainWindow.fxml
@@ -35,7 +35,7 @@
                   <Insets left="1.0" right="1.0" />
                </HBox.margin>
             </Label>
-            <Button id="add_tour_btn" alignment="CENTER" mnemonicParsing="false" prefHeight="28.0" prefWidth="28.0" text="+">
+            <Button fx:id="AddTourBtn" id="add_tour_btn" onAction="#addTour" alignment="CENTER" mnemonicParsing="false" prefHeight="28.0" prefWidth="28.0" text="+">
                <HBox.margin>
                   <Insets left="1.0" right="1.0" top="3.0" />
                </HBox.margin>
@@ -74,17 +74,17 @@
       </MenuBar>
       <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <TextField id="searchBar" onAction="#searchAction" text="Enter Tour" fx:id="searchBar" prefHeight="30.0" prefWidth="300.0">
+            <TextField id="searchBar" text="Enter Tour" fx:id="searchBar" prefHeight="30.0" prefWidth="300.0">
                <HBox.margin>
                   <Insets left="2.0" right="2.0" top="3.0" />
                </HBox.margin>
             </TextField>
-            <Button id="search_btn" mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="O-" wrapText="true">
+            <Button id="search_btn" onAction="#searchAction"  mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="O-" wrapText="true">
                <HBox.margin>
                   <Insets top="3.0" />
                </HBox.margin>
             </Button>
-            <Button id="clear_btn" mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="X" wrapText="true">
+            <Button id="clear_btn" onAction="#clearAction"  mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="X" wrapText="true">
                <HBox.margin>
                   <Insets top="3.0" />
                </HBox.margin>
