--- a/tourplanner/src/main/resources/fxml/mainWindow.fxml
+++ b/tourplanner/src/main/resources/fxml/mainWindow.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,81 +17,103 @@
 <?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.Controller">
-  <columnConstraints>
+   <columnConstraints>
       <ColumnConstraints hgrow="ALWAYS" maxWidth="231.0" minWidth="10.0" prefWidth="180.0" />
-    <ColumnConstraints hgrow="ALWAYS" maxWidth="428.0" minWidth="10.0" prefWidth="425.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="195.0" minHeight="10.0" prefHeight="34.0" valignment="CENTER" vgrow="NEVER" />
-    <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="ALWAYS" maxWidth="428.0" minWidth="10.0" prefWidth="425.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="195.0" minHeight="10.0" prefHeight="34.0" valignment="CENTER" vgrow="NEVER" />
+      <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="331.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+   </rowConstraints>
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+      <HBox prefHeight="90.0" prefWidth="200.0" GridPane.rowIndex="1">
          <children>
-            <Label id="tour_label" alignment="CENTER" prefHeight="36.0" prefWidth="79.0" text="Tours">
+            <Label id="tour_label" alignment="CENTER" graphicTextGap="2.0" prefHeight="28.0" prefWidth="71.0" text="Tours">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="1.0" right="1.0" top="3.0" />
+               </HBox.margin>
                <font>
-                  <Font name="Andale Mono" size="18.0" />
+                  <Font size="16.0" />
                </font>
-               <HBox.margin>
-                  <Insets left="1.0" right="1.0" />
-               </HBox.margin>
             </Label>
-            <Button fx:id="AddTourBtn" id="add_tour_btn" onAction="#addTour" alignment="CENTER" mnemonicParsing="false" prefHeight="28.0" prefWidth="28.0" text="+">
+            <Button id="add_tour_btn" fx:id="AddTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#addTour" prefHeight="25.0" prefWidth="25.0" text="+">
                <HBox.margin>
-                  <Insets left="1.0" right="1.0" top="3.0" />
+                  <Insets left="2.0" right="2.0" top="3.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="RemoveTourBtn" id="rem_tour_btn" onAction="#removeTour" mnemonicParsing="false" prefHeight="28.0" prefWidth="28.0" text="-" textAlignment="CENTER">
+            <Button id="rem_tour_btn" fx:id="RemoveTourBtn" mnemonicParsing="false" onAction="#removeTour" prefHeight="25.0" prefWidth="25.0" text="-" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets left="1.0" right="1.0" top="3.0" />
+                  <Insets left="2.0" right="2.0" top="3.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="EditTourBtn" id="cp_tour_btn" onAction="#editTour" alignment="CENTER" mnemonicParsing="false" prefHeight="28.0" prefWidth="28.0" text="*" textAlignment="CENTER">
+            <Button id="cp_tour_btn" fx:id="EditTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#editTour" prefHeight="25.0" prefWidth="25.0" text="*" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets left="1.0" right="1.0" top="3.0" />
+                  <Insets left="2.0" right="2.0" top="3.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-         <ListView fx:id="tourList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-      <MenuBar prefHeight="29.0" prefWidth="153.0" GridPane.columnSpan="2">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <AnchorPane prefHeight="332.0" prefWidth="175.0" GridPane.rowIndex="2">
          <children>
-            <TextField id="searchBar" text="Enter Tour" fx:id="searchBar" prefHeight="30.0" prefWidth="300.0">
+            <ListView fx:id="tourList" layoutX="8.0" layoutY="14.0" prefHeight="311.0" prefWidth="163.0">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </ListView>
+            <Separator layoutX="8.0" layoutY="1.0" prefHeight="12.0" prefWidth="588.0">
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+            </Separator>
+         </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" />
+         </padding>
+      </AnchorPane>
+      <MenuBar prefHeight="29.0" prefWidth="153.0" GridPane.columnSpan="2">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Close" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <HBox prefHeight="59.0" prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <children>
+            <TextField id="searchBar" fx:id="searchBar" prefHeight="30.0" prefWidth="300.0" text="Enter Tour">
                <HBox.margin>
                   <Insets left="2.0" right="2.0" top="3.0" />
                </HBox.margin>
             </TextField>
-            <Button id="search_btn" onAction="#searchAction"  mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="O-" wrapText="true">
+            <Button id="search_btn" mnemonicParsing="false" onAction="#searchAction" prefHeight="25.0" prefWidth="50.0" text="O-" wrapText="true">
                <HBox.margin>
-                  <Insets top="3.0" />
+                  <Insets left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </Button>
-            <Button id="clear_btn" onAction="#clearAction"  mnemonicParsing="false" prefHeight="28.0" prefWidth="58.0" text="X" wrapText="true">
+            <Button id="clear_btn" mnemonicParsing="false" onAction="#clearAction" prefHeight="25.0" prefWidth="50.0" text="X" wrapText="true">
                <HBox.margin>
-                  <Insets top="3.0" />
+                  <Insets left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </Button>
          </children>
+      </HBox>
+      <HBox prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <fx:include fx:id="tourInfos" source="tourInfos.fxml" />
       </HBox>
    </children>
 </GridPane>
