--- a/tourplanner/src/main/resources/fxml/addLog.fxml
+++ b/tourplanner/src/main/resources/fxml/addLog.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<?import javafx.collections.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.* ?>
+<?import javafx.scene.layout.* ?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -38,15 +45,24 @@
                 <HBox>
                     <children>
                         <Label prefHeight="18.0" prefWidth="65.0" text="Time: " />
-                        <TextField fx:id="time" />
+                        <Spinner fx:id="time">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory min="0" max="600"/>
+                            </valueFactory>
+                        </Spinner>
                     </children>
+
                 </HBox>
                 <HBox>
                     <children>
                         <Label prefHeight="18.0" prefWidth="65.0" text="Distance: " />
+
                         <Spinner fx:id="distance">
-                            <SpinnerValueFactory.IntegerSpinnerValueFactory min="0" max="300"/>
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory min="0" max="300"/>
+                            </valueFactory>
                         </Spinner>
+
                     </children>
                 </HBox>
                 <HBox>
@@ -82,36 +98,48 @@
                 <HBox>
                     <children>
                         <Label prefHeight="18.0" prefWidth="65.0" text="Weather: " />
-                        <ChoiceBox fx:id="weather" prefWidth="150.0" />
-                        <String fx:value="Sunny" />
-                        <String fx:value="Cloudy" />
-                        <String fx:value="Thunder" />
-                        <String fx:value="Rainy" />
-                        <String fx:value="Foggy" />
-                        <String fx:value="Hail" />
-                        <String fx:value="Windy" />
+                        <ChoiceBox fx:id="weather" prefWidth="150.0" value="Sunny">
+                            <items>
+                                <FXCollections fx:factory="observableArrayList">
+                                    <String fx:value="Sunny" />
+                                    <String fx:value="Snowy" />
+                                    <String fx:value="Cloudy" />
+                                    <String fx:value="Thunder" />
+                                    <String fx:value="Rainy" />
+                                    <String fx:value="Foggy" />
+                                    <String fx:value="Hail" />
+                                    <String fx:value="Windy" />
+                                </FXCollections>
+                            </items>
+                        </ChoiceBox>
+
                     </children>
                 </HBox>
                 <HBox>
                     <children>
                         <Label prefHeight="18.0" prefWidth="65.0" text="Activity: " />
-                        <ChoiceBox fx:id="activity" prefWidth="150.0" />
-                        <String fx:value="Running" />
-                        <String fx:value="Hiking" />
-                        <String fx:value="Biking" />
-                        <String fx:value="Walking" />
-                        <String fx:value="Climbing" />
-                        <String fx:value="Horse Riding" />
-                        <String fx:value="Rollerblading" />
+                        <ChoiceBox fx:id="activity" prefWidth="150.0" value="Running">
+                            <items>
+                                <FXCollections fx:factory="observableArrayList">
+                                    <String fx:value="Running" />
+                                    <String fx:value="Hiking" />
+                                    <String fx:value="Biking" />
+                                    <String fx:value="Walking" />
+                                    <String fx:value="Climbing" />
+                                    <String fx:value="Horseriding" />
+                                    <String fx:value="Rollerblading" />
+                                </FXCollections>
+                            </items>
+                        </ChoiceBox>
                     </children>
                 </HBox>
 
                 <HBox alignment="CENTER" prefHeight="37.0" prefWidth="485.0">
                     <children>
-                        <Button mnemonicParsing="false" onAction="#createLog" text="Create" />
+                        <Button mnemonicParsing="false" onAction="#addLog" text="Create" />
                     </children>
                     <children>
-                        <Button mnemonicParsing="false" onAction="#canceLog" text="Cancel" />
+                        <Button mnemonicParsing="false" onAction="#cancelLog" text="Cancel" />
                     </children>
                 </HBox>
             </children>
