--- a/tourplanner/src/main/resources/fxml/addLog.fxml
+++ b/tourplanner/src/main/resources/fxml/addLog.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-    xmlns="http://javafx.com/javafx/11.0.2"
+    xmlns="http://javafx.com/javafx/15.0.2"
     xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.AddLogController">
     <columnConstraints>
         <ColumnConstraints />
@@ -102,11 +102,11 @@
                             <items>
                                 <FXCollections fx:factory="observableArrayList">
                                     <String fx:value="Sunny" />
-                                    <String fx:value="Snowy" />
+                                    <String fx:value="Snow" />
                                     <String fx:value="Cloudy" />
                                     <String fx:value="Thunder" />
-                                    <String fx:value="Rainy" />
-                                    <String fx:value="Foggy" />
+                                    <String fx:value="Rain" />
+                                    <String fx:value="Fog" />
                                     <String fx:value="Hail" />
                                     <String fx:value="Windy" />
                                 </FXCollections>
