--- a/tourplanner/src/main/resources/fxml/tourOverview.fxml
+++ b/tourplanner/src/main/resources/fxml/tourOverview.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.TourOverviewController">
+<AnchorPane maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.TourOverviewController">
    <children>
       <GridPane alignment="CENTER" layoutX="66.0" layoutY="-26.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="312.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -20,12 +20,13 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="201.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="366.0" minHeight="10.0" prefHeight="298.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="366.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="366.0" minHeight="10.0" prefHeight="265.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
                   <HBox prefHeight="47.0" prefWidth="132.0">
                      <children>
-                        <Label id="tour_label" alignment="CENTER" graphicTextGap="2.0" prefHeight="28.0" prefWidth="71.0" text="Tours">
+                        <Label id="tour_label" alignment="CENTER" graphicTextGap="2.0" prefHeight="25.0" prefWidth="127.0" text="Tours">
                            <HBox.margin>
                               <Insets bottom="3.0" left="1.0" right="1.0" top="3.0" />
                            </HBox.margin>
@@ -33,29 +34,14 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Button id="add_tour_btn" fx:id="AddTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#addTour" prefHeight="25.0" prefWidth="25.0" text="+">
-                           <HBox.margin>
-                              <Insets left="2.0" right="2.0" top="3.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button id="rem_tour_btn" fx:id="RemoveTourBtn" mnemonicParsing="false" onAction="#removeTour" prefHeight="25.0" prefWidth="25.0" text="-" textAlignment="CENTER">
-                           <HBox.margin>
-                              <Insets left="2.0" right="2.0" top="3.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button id="cp_tour_btn" fx:id="EditTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#editTour" prefHeight="25.0" prefWidth="25.0" text="*" textAlignment="CENTER">
-                           <HBox.margin>
-                              <Insets left="2.0" right="2.0" top="3.0" />
-                           </HBox.margin>
-                        </Button>
                      </children>
                <GridPane.margin>
                   <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
                   </HBox>
-                  <VBox fillWidth="false" prefHeight="249.0" prefWidth="132.0" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
+                  <VBox fillWidth="false" prefHeight="167.0" prefWidth="132.0" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.rowSpan="2147483647">
                <children>
-                        <ListView fx:id="tourList" onMouseClicked="#selectTour" prefHeight="267.0" prefWidth="132.0">
+                        <ListView fx:id="tourList" onMouseClicked="#selectTour" prefHeight="248.0" prefWidth="132.0">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin></ListView>
@@ -64,6 +50,30 @@
                   <Insets bottom="14.0" top="8.0" />
                </GridPane.margin>
                   </VBox>
+            <HBox prefHeight="45.0" prefWidth="132.0" GridPane.rowIndex="1">
+               <children>
+                        <Button id="add_tour_btn" fx:id="AddTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#addTour" text="+">
+                     <HBox.margin>
+                        <Insets left="3.0" right="3.0" top="2.0" />
+                     </HBox.margin>
+                        </Button>
+                        <Button id="rem_tour_btn" fx:id="RemoveTourBtn" mnemonicParsing="false" onAction="#removeTour" prefHeight="25.0" prefWidth="25.0" text="-" textAlignment="CENTER">
+                     <HBox.margin>
+                        <Insets left="3.0" right="3.0" top="2.0" />
+                     </HBox.margin>
+                        </Button>
+                        <Button id="cp_tour_btn" fx:id="EditTourBtn" alignment="CENTER" mnemonicParsing="false" onAction="#editTour" prefHeight="25.0" prefWidth="25.0" text="[]" textAlignment="CENTER">
+                     <HBox.margin>
+                        <Insets left="3.0" right="3.0" top="2.0" />
+                     </HBox.margin>
+                        </Button>
+                <Button mnemonicParsing="false" onAction="#makeFavorite" text="#">
+                     <HBox.margin>
+                        <Insets left="3.0" right="3.0" top="2.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="5.0" left="3.0" right="3.0" top="5.0" />
